Closed Bug 1882944 Opened 7 months ago Closed 7 months ago

dom/media/CallbackThreadRegistry.cpp:15:9: error: use of undeclared identifier 'NS_NewRunnableFunction'

Categories

(Core :: WebRTC: Audio/Video, defect)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

This happens when building the iOS port prototype with --disable-unified-build.

 4:37.68 /tmp/gecko/dom/media/CallbackThreadRegistry.cpp:15:9: error: use of undeclared identifier 'NS_NewRunnableFunction'
 4:37.69    15 |         NS_NewRunnableFunction(__func__, [registry = &mRegistry] {
 4:37.69       |         ^
Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/550b8e5b1db2 Add missing header for NS_NewRunnableFunction. r=webrtc-reviewers,jib
Status: NEW → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: