Bug 1882944 - Add missing header for NS_NewRunnableFunction. r=webrtc-reviewers,jib

Differential Revision: https://phabricator.services.mozilla.com/D203221