dom/media/CallbackThreadRegistry.cpp
@@ -6,6 +6,7 @@
 
 #include "CallbackThreadRegistry.h"
 #include "mozilla/ClearOnShutdown.h"
+#include "nsThreadUtils.h"
 
 namespace mozilla {
 struct CallbackThreadRegistrySingleton {
